<resources>
    <string name="app_name">Route Gradient</string>
    <string name="loading_error_message">Unable to execute search. Check your internet connection and try again.</string>
    <string name="bad_result_error_message">Something went wrong. Make sure you have the right coordinates and try again.</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">View route on map</string>
    <string name="action_share">Share</string>
    <string name="share_chooser">Select an app to share this route</string>

    <!--Preferences strings-->
    <string name="pref_units_key">pref_units</string>
    <string name="pref_units_title">Elevation Units</string>
    <string name="pref_units_entry_meters">Meters</string>
    <string name="pref_units_value_meters" translatable="false">meters</string>
    <string name="pref_units_entry_feet">Feet</string>
    <string name="pref_units_value_feet" translatable="false">feet</string>
    <string name="pref_units_default">@string/pref_units_value_meters</string>

    <string name="pref_data_key">pref_data</string>
    <string name="pref_data_title">Result Data</string>
    <string name="pref_data_entry_percent">Percent gradient</string>
    <string name="pref_data_value_percent" translatable="false">percent</string>
    <string name="pref_data_entry_total">Total change</string>
    <string name="pref_data_value_total" translatable="false">total</string>
    <string name="pref_data_default">@string/pref_data_value_total</string>

    <string name="pref_samples_key">pref_samples</string>
    <string name="pref_samples_title">Number of Samples</string>
    <string name="pref_samples_default">1</string>

    <string name = "max_gradient">Maximum Gradient: </string>
    <string name = "total_gradient_change">Gradient From Start to End: </string>
    <string name = "total_elevation_change">Net Elevation Change: </string>
</resources>
